Fix white space issue in splash page

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -68,3 +68,7 @@
     float: right;
     margin: 0;
 }
+
+#username-input {
+    width: 399px;
+}
