--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,9 +1,4 @@
-/* html {
-    overflow: hidden;
-} */
-
 .harmony-app {
-    width: 100vw;
     height: 100vh;
 }
 
